# toplist-rs

./: .gitignore  README.md
backend/: Cargo.toml  endpoints.txt
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/css/: style2.css
frontend/src/: main.rs
frontend/src/pages/: maps.rs  mod.rs  profile.rs  records.rs
