[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.11", features = ["headers", "macros"] }
axum-macros = "0.3.6"
chrono = "0.4.24"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "json"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
